[gd_scene load_steps=59 format=3 uid="uid://cpkrhqm5fkwgw"]

[ext_resource type="PackedScene" uid="uid://b1rv5l00jkku4" path="res://framework/InputCode/P1INPUT.tscn" id="1_nw652"]
[ext_resource type="PackedScene" uid="uid://dmuatunloj5a1" path="res://framework/MotionCode/MYMOTION.tscn" id="2_o2ace"]
[ext_resource type="PackedScene" uid="uid://hx68qxv0hl7t" path="res://framework/Anim Tree/motion_anim_tree.tscn" id="3_hy1na"]
[ext_resource type="PackedScene" uid="uid://qv3ae6b6cbjx" path="res://framework/Transitions/transitions.tscn" id="4_2oswj"]
[ext_resource type="Script" path="res://framework/AttackBox/FSM/punch.gd" id="4_lcycp"]
[ext_resource type="PackedScene" uid="uid://buftrs7al3sfh" path="res://framework/Player/Heroe SC2.tscn" id="5_0rq1a"]
[ext_resource type="Script" path="res://framework/Player/AnimationTree/anim.gd" id="5_72co0"]
[ext_resource type="Script" path="res://framework/AttackInput/punch.gd" id="5_alkp5"]
[ext_resource type="Script" path="res://framework/AttackBox/hitbox.gd" id="6_47bye"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bwfm1"]
radius = 5.09902

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_phv0g"]
animation = &"sprites/KICK_BACK_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a18h1"]
animation = &"sprites/KICK_BACK_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uijm2"]
animation = &"sprites/KICK_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5v22i"]
animation = &"sprites/KICK_FRONT_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_da0th"]
animation = &"sprites/KICK_FRONT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4yx5k"]
animation = &"sprites/KICK_FRONT_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jsag0"]
animation = &"sprites/KICK_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pabg1"]
animation = &"sprites/KICK_BACK_LEFT_"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_cutpx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_phv0g")
blend_point_0/pos = Vector2(0, -0.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_a18h1")
blend_point_1/pos = Vector2(0.1, -0.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_uijm2")
blend_point_2/pos = Vector2(0.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_5v22i")
blend_point_3/pos = Vector2(0.1, 0.1)
blend_point_4/node = SubResource("AnimationNodeAnimation_da0th")
blend_point_4/pos = Vector2(0, 0.1)
blend_point_5/node = SubResource("AnimationNodeAnimation_4yx5k")
blend_point_5/pos = Vector2(-0.1, 0.1)
blend_point_6/node = SubResource("AnimationNodeAnimation_jsag0")
blend_point_6/pos = Vector2(-0.1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_pabg1")
blend_point_7/pos = Vector2(-0.1, -0.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e2717"]
animation = &"sprites/IDLE_BACK_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hew3n"]
animation = &"sprites/IDLE_BACK_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_87bnc"]
animation = &"sprites/WALK fixed_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8f3su"]
animation = &"sprites/WALK fixed_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xtax6"]
animation = &"sprites/WALK fixed_BACK_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1uh7c"]
animation = &"sprites/IDLE_FRONT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bj6b0"]
animation = &"sprites/WALK fixed_FRONT_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_swhk4"]
animation = &"sprites/WALK fixed_FRONT_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uvrqy"]
animation = &"sprites/IDLE_FRONT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3lgs"]
animation = &"sprites/IDLE_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3g0v6"]
animation = &"sprites/IDLE_FRONT_RIGHT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6wooh"]
animation = &"sprites/IDLE_FRONT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8owok"]
animation = &"sprites/IDLE_FRONT_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oyt6g"]
animation = &"sprites/IDLE_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6bmit"]
animation = &"sprites/IDLE_BACK_LEFT_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v51o6"]
animation = &"sprites/WALK fixed_BACK_"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w44pw"]
animation = &"sprites/WALK fixed_BACK_RIGHT_"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_pchwr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e2717")
blend_point_0/pos = Vector2(0, -0.5)
blend_point_1/node = SubResource("AnimationNodeAnimation_hew3n")
blend_point_1/pos = Vector2(0.5, -0.5)
blend_point_2/node = SubResource("AnimationNodeAnimation_i3lgs")
blend_point_2/pos = Vector2(0.5, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_3g0v6")
blend_point_3/pos = Vector2(0.5, 0.5)
blend_point_4/node = SubResource("AnimationNodeAnimation_6wooh")
blend_point_4/pos = Vector2(0, 0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_8owok")
blend_point_5/pos = Vector2(-0.5, 0.5)
blend_point_6/node = SubResource("AnimationNodeAnimation_oyt6g")
blend_point_6/pos = Vector2(-0.5, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_6bmit")
blend_point_7/pos = Vector2(-0.5, -0.5)
blend_point_8/node = SubResource("AnimationNodeAnimation_v51o6")
blend_point_8/pos = Vector2(0, -1)
blend_point_9/node = SubResource("AnimationNodeAnimation_w44pw")
blend_point_9/pos = Vector2(1, -1)
blend_point_10/node = SubResource("AnimationNodeAnimation_87bnc")
blend_point_10/pos = Vector2(1, 0)
blend_point_11/node = SubResource("AnimationNodeAnimation_8f3su")
blend_point_11/pos = Vector2(-1, 0)
blend_point_12/node = SubResource("AnimationNodeAnimation_xtax6")
blend_point_12/pos = Vector2(-1, -1)
blend_point_13/node = SubResource("AnimationNodeAnimation_1uh7c")
blend_point_13/pos = Vector2(0, 1)
blend_point_14/node = SubResource("AnimationNodeAnimation_bj6b0")
blend_point_14/pos = Vector2(1, 1)
blend_point_15/node = SubResource("AnimationNodeAnimation_swhk4")
blend_point_15/pos = Vector2(-1, 1)
blend_point_16/node = SubResource("AnimationNodeAnimation_uvrqy")
blend_point_16/pos = Vector2(0, 0)
snap = Vector2(0.5, 0.5)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wh3oy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2k16h"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_chth2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_30p38"]
states/ATTACK/node = SubResource("AnimationNodeBlendSpace2D_cutpx")
states/ATTACK/position = Vector2(283.333, 144)
states/MOVE/node = SubResource("AnimationNodeBlendSpace2D_pchwr")
states/MOVE/position = Vector2(283.333, 55.6667)
states/Start/position = Vector2(98.6667, 126.667)
transitions = ["Start", "MOVE", SubResource("AnimationNodeStateMachineTransition_wh3oy"), "MOVE", "ATTACK", SubResource("AnimationNodeStateMachineTransition_2k16h"), "ATTACK", "MOVE", SubResource("AnimationNodeStateMachineTransition_chth2")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_igdsg"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c44hc"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_68drk"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i7k6j"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_as3e7"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e3r4w"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kalak"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oeo23"]
animation = &"Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wfnmb"]
animation = &"IDLE"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3wfc3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_igdsg")
blend_point_0/pos = Vector2(0, -0.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_c44hc")
blend_point_1/pos = Vector2(0.1, -0.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_68drk")
blend_point_2/pos = Vector2(0.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_i7k6j")
blend_point_3/pos = Vector2(0.1, 0.1)
blend_point_4/node = SubResource("AnimationNodeAnimation_as3e7")
blend_point_4/pos = Vector2(0, 0.1)
blend_point_5/node = SubResource("AnimationNodeAnimation_e3r4w")
blend_point_5/pos = Vector2(-0.1, 0.1)
blend_point_6/node = SubResource("AnimationNodeAnimation_kalak")
blend_point_6/pos = Vector2(-0.1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_oeo23")
blend_point_7/pos = Vector2(-0.1, -0.1)
blend_point_8/node = SubResource("AnimationNodeAnimation_wfnmb")
blend_point_8/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ofmwe"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_7037f"]
states/ATTACKS/node = SubResource("AnimationNodeBlendSpace2D_3wfc3")
states/ATTACKS/position = Vector2(398, 95)
transitions = ["Start", "ATTACKS", SubResource("AnimationNodeStateMachineTransition_ofmwe")]

[sub_resource type="Animation" id="Animation_u2y8c"]
resource_name = "Front"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Hitbox/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox/Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(40, -32), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%DebugAttackBox:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(0.034079, 0.45615, 0.719425, 1), Color(0.788212, 0.0635511, 0.364638, 1), Color(0.158276, 0.410477, 0.837686, 1)]
}

[sub_resource type="Animation" id="Animation_jg887"]
resource_name = "IDLE"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Hitbox/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%DebugAttackBox:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0352941, 0.454902, 0.717647, 0.392157)]
}

[sub_resource type="Animation" id="Animation_voj1d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Hitbox/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox/Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, -32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%DebugAttackBox:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.034079, 0.45615, 0.719425, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrtma"]
_data = {
"Front": SubResource("Animation_u2y8c"),
"IDLE": SubResource("Animation_jg887"),
"RESET": SubResource("Animation_voj1d")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_a6k0l"]
radius = 15.2971

[node name="Player" type="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bwfm1")

[node name="INPUT" parent="." node_paths=PackedStringArray("buffer") instance=ExtResource("1_nw652")]
buffer = NodePath("Buffer")

[node name="Buffer" parent="INPUT" index="1"]
KeyBufferResetTimerMax = 0.6

[node name="Motion" parent="." node_paths=PackedStringArray("Root", "Transition") instance=ExtResource("2_o2ace")]
multiplier = 100.0
Root = NodePath("..")
Transition = NodePath("../Transitions")

[node name="Motion AnimTree" parent="." node_paths=PackedStringArray("Anim", "Transition") instance=ExtResource("3_hy1na")]
Anim = NodePath("../AnimTree/Anim")
Transition = NodePath("../Transitions")

[node name="ANIMATIONS" type="Node" parent="."]

[node name="ATTACKS" type="Node" parent="ANIMATIONS"]
unique_name_in_owner = true

[node name="PUNCH" type="Node" parent="ANIMATIONS/ATTACKS"]
script = ExtResource("4_lcycp")
attack_hitstun = 0.15
shake_strenght = 2.0
shake_speed = 3.0

[node name="Transitions" parent="." node_paths=PackedStringArray("currentmotion", "inputnode", "currentanim", "motionparent", "motionanimtree") instance=ExtResource("4_2oswj")]
unique_name_in_owner = true
currentmotion = NodePath("../Motion/IDLE")
inputnode = NodePath("../INPUT")
currentanim = NodePath("../Motion AnimTree/IDLE")
motionparent = NodePath("../Motion")
motionanimtree = NodePath("../Motion AnimTree")

[node name="PUNCH" type="Node" parent="Transitions"]
script = ExtResource("5_alkp5")

[node name="AnimTree" type="Node" parent="."]

[node name="Anim" type="AnimationTree" parent="AnimTree"]
unique_name_in_owner = true
active = false
root_node = NodePath("%Anim/../..")
tree_root = SubResource("AnimationNodeStateMachine_30p38")
anim_player = NodePath("../../Sprites/Animations")
parameters/conditions/attack = false
parameters/ATTACK/blend_position = Vector2(-0.00216293, -0.0106384)
parameters/MOVE/blend_position = Vector2(-0.0064888, -0.0265486)
script = ExtResource("5_72co0")

[node name="AttackBoxAnimTree" type="AnimationTree" parent="AnimTree"]
unique_name_in_owner = true
root_node = NodePath("%AttackBoxAnimTree/..")
tree_root = SubResource("AnimationNodeStateMachine_7037f")
anim_player = NodePath("AttackBoxAnim")
parameters/ATTACKS/blend_position = Vector2(0.00216293, -0.005988)

[node name="AttackBoxAnim" type="AnimationPlayer" parent="AnimTree/AttackBoxAnimTree"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_yrtma")
}

[node name="Sprites" parent="." instance=ExtResource("5_0rq1a")]

[node name="SpriteSheet" parent="Sprites" index="0"]
position = Vector2(1, -28)
animation = &"default"

[node name="Hitbox" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_47bye")

[node name="Hitbox" type="Area2D" parent="Hitbox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Hitbox"]
shape = SubResource("CircleShape2D_a6k0l")
disabled = true
metadata/_edit_lock_ = true

[node name="DebugAttackBox" type="ColorRect" parent="Hitbox/Hitbox/CollisionShape2D"]
unique_name_in_owner = true
offset_left = -14.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 14.0
color = Color(0.0352941, 0.454902, 0.717647, 0.392157)
metadata/_edit_lock_ = true

[node name="HitstopFreeze" type="Timer" parent="."]
unique_name_in_owner = true
process_mode = 3

[connection signal="animation_finished" from="AnimTree/Anim" to="Transitions" method="_on_anim_animation_finished"]
[connection signal="area_entered" from="Hitbox/Hitbox" to="Hitbox" method="_on_hitbox_area_entered"]
[connection signal="timeout" from="HitstopFreeze" to="Hitbox" method="_on_hitstop_freeze_timeout"]

[editable path="INPUT"]
[editable path="Motion"]
[editable path="Motion AnimTree"]
[editable path="Transitions"]
[editable path="Sprites"]
